@@ -1,3 +1,15 @@
+2006-12-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, include/pqxx/result.hxx,
+ include/pqxx/util.hxx, src/connection_base.cxx, src/pipeline.cxx,
+ src/result.cxx, src/util.cxx:
+  - result::swap() didn't swap protocol fields
+  - Keep shared result data (apart from PGresult) in new "shared_data" object
+  - Early provision for thread synchronization in result
+  - Results remember the queries that yielded them
+  - result::CheckStatus() no longer takes argument (no longer need 2 versions)
+  - Radically changed result class definition
+ test/test070.cxx:
+  - Test new result::query()
 2006-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx, include/pqxx/except.hxx:
   - Documented SIGPIPE when connection breaks, thanks Leandro Lucarella
